# handy01

./: .gitignore  index.html  package-lock.json  package.json
docs/superpowers/plans/: 2026-04-01-handy01-implementation.md
docs/superpowers/specs/: 2026-04-01-handy01-design.md
sidecar/: pyproject.toml  requirements.txt  server.py  transcribe.py
sidecar/correction/: __init__.py  cloud_llm.py  local_llm.py  router.py
sidecar/models/: manager.py
sidecar/tests/: test_correction.py
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/audio/: capture.rs  chunker.rs  mod.rs  resample.rs
src-tauri/src/correction/: merge.rs  mod.rs  sliding_window.rs  style.rs
src-tauri/src/hotkey/: manager.rs  mod.rs
src-tauri/src/inject/: mod.rs  text_injector.rs
src-tauri/src/sidecar/: client.rs  mod.rs  process.rs
src-tauri/src/state/: app_state.rs  mod.rs  settings.rs
src/components/: CorrectionPreview.tsx  LiveTranscript.tsx  SettingsPanel.tsx  StatusIndicator.tsx
src/styles/: globals.css
tests/e2e/: dictation.spec.ts
tests/performance/: latency.bench.ts
