[project]
name = "handy01-sidecar"
version = "0.1.0"
description = "Python sidecar for Handy01 - Whisper transcription and AI correction"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "faster-whisper>=1.0.0",
    "transformers>=4.45.0",
    "torch>=2.4.0",
    "openai>=1.50.0",
    "anthropic>=0.36.0",
    "huggingface_hub>=0.25.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.30.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
