[package]
name = "handy01"
version = "0.1.0"
description = "Real-time voice dictation with AI contextual correction"
authors = ["you"]
edition = "2021"

[lib]
name = "handy01_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-global-shortcut = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
cpal = "0.15"
hound = "3.5"
rubato = "0.15"
rdev = "0.5"
enigo = "0.2"
which = "6.0"
dirs = "5.0"
log = "0.4"
env_logger = "0.11"
arboard = "3.4"
